[metadata]
name = neutron-lbaas
summary = OpenStack Networking Load Balancing as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    neutron_lbaas
data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/lbaas-haproxy.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-lbaas-agent = neutron_lbaas.cmd.lbaas_agent:main
    neutron-lbaasv2-agent = neutron_lbaas.cmd.lbaasv2_agent:main
device_drivers =
    # These are for backwards compat with Juno loadbalancer service provider configuration values
    neutron.services.loadbalancer.drivers.a10networks.driver_v1.ThunderDriver = neutron_lbaas.services.loadbalancer.drivers.a10networks.driver_v1:ThunderDriver
    neutron.services.loadbalancer.drivers.haproxy.plugin_driver.HaproxyOnHostPluginDriver = neutron_lbaas.services.loadbalancer.drivers.haproxy.plugin_driver:HaproxyOnHostPluginDriver
    neutron.services.loadbalancer.drivers.haproxy.namespace_driver.HaproxyNSDriver = neutron_lbaas.services.loadbalancer.drivers.haproxy.namespace_driver:HaproxyNSDriver
    neutron.services.loadbalancer.drivers.netscaler.netscaler_driver.NetScalerPluginDriver = neutron_lbaas.services.loadbalancer.drivers.netscaler.netscaler_driver:NetScalerPluginDriver
    neutron.services.loadbalancer.drivers.radware.driver.LoadBalancerDriver = neutron_lbaas.services.loadbalancer.drivers.radware.driver:LoadBalancerDriver
loadbalancer_schedulers =
    neutron_lbaas.agent_scheduler.ChanceScheduler = neutron_lbaas.agent_scheduler:ChanceScheduler
pool_schedulers =
    neutron.services.loadbalancer.agent_scheduler.ChanceScheduler = neutron_lbaas.services.loadbalancer.agent_scheduler:ChanceScheduler
    neutron.services.loadbalancer.agent_scheduler.LeastPoolAgentScheduler = neutron_lbaas.services.loadbalancer.agent_scheduler:LeastPoolAgentScheduler
neutron.service_plugins =
    lbaasv2 = neutron_lbaas.services.loadbalancer.plugin.LoadBalancerPluginv2
neutron.db.alembic_migrations =
    neutron-lbaas = neutron_lbaas.db.migration:alembic_migrations
neutron_lbaas.cert_manager.backend =
    barbican = neutron_lbaas.common.cert_manager.barbican_cert_manager
    local = neutron_lbaas.common.cert_manager.local_cert_manager
oslo.config.opts =
    neutron.lbaas = neutron_lbaas.opts:list_opts
    neutron.lbaas.agent = neutron_lbaas.opts:list_agent_opts
    neutron.lbaas.service = neutron_lbaas.opts:list_service_opts
neutron_lbaas.cert_manager.barbican_auth =
    barbican_acl_auth = neutron_lbaas.common.cert_manager.barbican_auth.barbican_acl:BarbicanACLAuth

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_lbaas/locale/neutron_lbaas.pot

[compile_catalog]
directory = neutron_lbaas/locale
domain = neutron_lbaas

[update_catalog]
domain = neutron_lbaas
output_dir = neutron_lbaas/locale
input_file = neutron_lbaas/locale/neutron_lbaas.pot

[wheel]
universal = 1
